src/objects/Account_licence__c/Account_licence__c.object-meta.xml
<CustomObject>
    <description>This object is used to link Licences and Accounts – it enables a many-to-many relationship between Accounts and RX licences (so any particular account can have zero or more products linked, and any particular product can be linked to zero or more accounts</description>
    <label>Licence purchased</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Licence name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licences purchased</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>