src/objects/Account_licence__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_products1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>