src/objects/Account_licence__c/fields/Date_purchased__c.field-meta.xml
<CustomField>
    <fullName>Date_purchased__c</fullName>
    <label>Date purchased</label>
    <type>Date</type>
</CustomField>