src/objects/Account_licence__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licence</label>
    <referenceTo>RX_licence__c</referenceTo>
    <relationshipLabel>Licences purchased</relationshipLabel>
    <relationshipName>Licences_purchased</relationshipName>
    <type>Lookup</type>
</CustomField>