src/objects/Account_licence__c/fields/Version_released_in__c.field-meta.xml
<CustomField>
    <fullName>Version_released_in__c</fullName>
    <formula>Licence__r.Version_released_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version released in</label>
    <type>Text</type>
</CustomField>